Adjusted nav-panel scrollbar to only be for bug items

--- a/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanel.scss
+++ b/client/src/CSS/scss_partials/home/menu/nav-panel/_navPanel.scss
@@ -21,10 +21,4 @@
 		margin: 0px auto;
 		padding-top: 10px;
 	}
-
-	.button-list-container {
-		height: 90vh;
-		overflow-y: auto;
-		overflow-x: hidden;
-	}
 }
